TwoSum2 implemented